--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -14,6 +14,7 @@ header {
         .menu {
             width: 24px;
             margin-right: 20px;
+            cursor: pointer;
         }
 
         .logoBox {
